<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <!-- Headers -->
    <string name="info_chooser_header">Get Info for New Place</string>
    
    <!-- InfoChooser -->
    <string name="nfc_button_top">Tap an NFC sticker</string>
    <string name="nfc_button_bottom">Physically tap your phone against a sticker to get info</string>
    <string name="qr_button_top">Scan a QR code</string>
    <string name="qr_button_bottom">Use your phone\'s camera to take a picture of a QR code</string>
    <string name="gps_button_top">Find your location</string>
    <string name="gps_button_bottom">Use your phone\'s GPS to get nearby locations</string>
    
    <!-- Widgets -->
    <string name="view_menu">View Menu</string>
    <string name="view_menu_icon">View menu icon</string>

    <string name="nearby_locations">Find Nearby Locations</string>
    <string name="nearby_locations_header">Choose a nearby location</string>
    <string name="nfc_instructions_top">Touch the back of your phone to the sticker.</string>
    <string name="nfc_instructions">Image showing to tap phone against sticker.</string>
    <string name="nfc_instructions_bottom">You can tap to get information any time the phone is unlocked, without coming to this screen.</string>
    <string name="infoit">InfoIt</string>
    
    <string name="Restaurant">Restaurant</string>
    <string name="back_to_restaurant">Back to Restaurant</string>
    <string name="Most_Liked">Most Liked</string>
    
    <!-- Actions Menu -->
    <string name="things_you_can_do">Things you can do</string>

    <!-- Accessibility -->
    <string name="separator">separator</string>
    <string name="drop_shadow">drop_shadow</string>
    
    <!-- Titles -->
    <string name="bookmarks">Bookmarks</string>
    <string name="recent_history">Recent History</string>

</resources>