<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nfc_instructions_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="7" >

        <TextView
            android:id="@+id/instructions_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:text="@string/nfc_instructions_top" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dip"
            android:layout_weight="3"
            android:contentDescription="@string/nfc_instructions"
            android:src="@drawable/nfc_instructions" />

        <TextView
            android:id="@+id/instructions_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:text="@string/nfc_instructions_bottom" />
    </LinearLayout>

</FrameLayout>