<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="1dp"
    android:layout_height="1dp"
    android:background="#666666" >

    <LinearLayout
        android:id="@+id/action_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#888888"
            android:paddingTop="5dip"
            android:paddingBottom="5dip"
            android:paddingLeft="10dip"
            android:text="@string/things_you_can_do"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:contentDescription="@string/separator"
            android:src="@drawable/ui_menu_header_separator" />

        <LinearLayout
            android:id="@+id/action_buttons_container"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:scaleType="fitXY"
        android:contentDescription="@string/drop_shadow"
        android:src="@drawable/ui_drop_shadow_right" />

</FrameLayout>