<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/info_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ui_header_gradient"
            android:padding="5dip"
            android:text="@string/info_chooser_header"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/chooser_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="3" >

            <FrameLayout
                android:id="@+id/nfc_choice"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical" >

                    <FrameLayout
                        android:id="@+id/nfc_button"
                        android:layout_width="100dip"
                        android:layout_height="100dip"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dip"
                        android:background="@drawable/infochooser_square_button" >

                        <ImageView
                            android:layout_width="75dip"
                            android:layout_height="75dip"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:src="@drawable/infochooser_nfc_icon" >
                        </ImageView>
                    </FrameLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dip"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/nfc_button_top"
                            android:textColor="#000000"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/nfc_button_bottom"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/qr_choice"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical" >

                    <FrameLayout
                        android:id="@+id/qr_button"
                        android:layout_width="100dip"
                        android:layout_height="100dip"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dip"
                        android:background="@drawable/infochooser_square_button" >

                        <ImageView
                            android:layout_width="75dip"
                            android:layout_height="75dip"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:src="@drawable/infochooser_qr_code" >
                        </ImageView>
                    </FrameLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dip"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/qr_button_top"
                            android:textColor="#000000"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/qr_button_bottom"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/gps_choice"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical" >

                    <FrameLayout
                        android:id="@+id/gps_button"
                        android:layout_width="100dip"
                        android:layout_height="100dip"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dip"
                        android:background="@drawable/infochooser_square_button" >

                        <ImageView
                            android:layout_width="75dip"
                            android:layout_height="75dip"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:src="@drawable/infochooser_nearby_locations_icon" >
                        </ImageView>
                    </FrameLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dip"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/gps_button_top"
                            android:textColor="#000000"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/gps_button_bottom"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>